[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Flag.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 30 )

[node name="Flag" type="Area2D" groups=["flag"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14.5, -16.5 )
scale = Vector2( 0.765625, 0.828125 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="TimeLabel" type="Label" parent="."]
margin_left = -5.0
margin_top = -71.0
margin_right = 35.0
margin_bottom = -57.0
align = 1
valign = 1

[connection signal="body_entered" from="." to="." method="_on_Flag_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
